<resources>

    <string-array name="bookGenres">
        <item>Choose Genre</item>
        <item>Literature</item>
        <item>Child</item>
        <item>Education</item>
        <item>History</item>
        <item>Religion</item>
        <item>Foreign Languages</item>
        <item>Course/Exam Books</item>
        <item>Art/Design</item>
        <item>Philosophy</item>
        <item>Comic Book</item>
        <item>Science</item>
        <item>Humor</item>
        <item>Hobby</item>
        <item>Mythology</item>
        <item>Engineering</item>
    </string-array>

    <string name="app_name">KITAPP</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="newNotice">Add New Notice</string>
    <string name="star">Rate the App</string>
    <string name="logout">Log Out</string>
    <string name="cart">Shoppings</string>
    <string name="others">Others</string>
    <string name="hello">Hello         %1$s</string>
    <string name="emailhint">Type Your E-mail</string>
    <string name="passwordhint">Type Your Password</string>
    <string name="loginButton">Log In</string>
    <string name="loginFail">Log In Failed</string>
    <string name="loginRegisterTextView">Register</string>
    <string name="registerFail">Registeration Failed</string>
    <string name="noticeUploaded">Notice Uploaded</string>
    <string name="registerSuccess">Registeration Successful</string>
    <string name="registerError">Please Fill All Necessary Fields</string>
    <string name="forgotPasswordButton">Reset My Password</string>
    <string name="forgotPasswordMailSent">A link is sent to your email to reset your password</string>
    <string name="loginForgotPasswordTextView">Forgot My Password</string>
    <string name="bookName">Book Name</string>
    <string name="bookPrice">Book Price</string>
    <string name="addNotice">Add Notice</string>
    <string name="updateUserName">Enter New User Name to Change</string>
    <string name="update">Update</string>
    <string name="updated">User Name Updated. Log In Again to See Updated User Name</string>
    <string name="notices">Notices</string>
    <string name="terms">I Accept All The Terms And Conditions</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="forum_search_topic" >Type topic to be searched</string>
    <string name="forum_add_topic" >Type topic to be added</string>
    <string name="topicadded" >Topic added</string>
    <string name="noticeBookDetails" >Type Details About Book</string>
    <string name="success" >Success</string>
    <string name="fail" >Fail</string>
    <string name="typehere">Type Here</string>
    <string name="sendmessage">Send Message</string>
    <string name="messagenotification">You Have New Message</string>
    <string name="searchNotice">Type Book Name to be  Searched</string>
    <string name="deleteNotice">Delete Notice</string>
    <string name="noticeDeleted">Notice Deleted. Refresh the page to see differences.</string>
    <string name="noticeSold">Set As Sold</string>
    <string name="person">Type buyer\'s username</string>
    <string name="areYouSure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="doYouConfirm">Do you confirm that user below has acquired the book below ?</string>
    <string name="book">Book</string>
    <string name="buyer">Buyer</string>
    <string name="noticesInMyCity">Show Notices Only  Current City</string>
    <string name="noticesInMyCountry">Show Notices Only Current Country</string>
    <string name="filtersTextview">Use filters below to filter results</string>
    <string name="seller">Seller</string>
    <string name="tooLong">Type maximum 200 digits for book name or book details,9 digits for price</string>
    <string name="genre">Genre</string>
    <string name="details">Book Details</string>
    <string name="pleaseAllow">To use the app please allow the app to be able use location services </string>
    <string name="usernameLong">Maximum 20 characters allowed for username </string>
    <string name="usernameExists">Username is taken. Type another one</string>
    <string name="shoopingsMade">Shopping(s) Made</string>
    <string name="allowImage">If you don\'t allow permission you can\'t pick image. If there is no image you can\'t add notice or change profile photo</string>
    <string name="imagewillbecorrect">When you pick an image, it might look reversed. Don\'t worry. It will be uploaded as normal. </string>
    <string name="location">Location </string>

</resources>
