<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
<group android:checkableBehavior="single">
    <item android:id="@+id/nav_menu_home" android:title="@string/home" android:icon="@drawable/ic_nav_home"></item>
    <item android:id="@+id/nav_menu_newNotice" android:title="@string/newNotice" android:icon="@drawable/ic_add_shopping_cart_black_24dp"></item>
    <item android:id="@+id/nav_menu_profile" android:title="@string/profile" android:icon="@drawable/ic_nav_profile"></item>
    <item android:id="@+id/nav_menu_forum" android:title="Forum" android:icon="@drawable/ic_nav_forum"></item>
    <item android:id="@+id/nav_menu_messages" android:title="@string/messages" android:icon="@drawable/ic_nav_messages"></item>
    <item android:id="@+id/nav_menu_cart" android:title="@string/cart" android:icon="@drawable/ic_nav_cart"></item>


</group>
    <item android:title="Other">
        <menu>
            <item android:id="@+id/nav_menu_star" android:title="@string/star" android:icon="@drawable/ic_nav_star"></item>
            <item android:id="@+id/nav_menu_logout" android:title="@string/logout" android:icon="@drawable/ic_nav_exit"></item>
        </menu>
    </item>
</menu>