<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#996633"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeFragmentRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/homeBookSearchEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/searchNotice"
        android:inputType="textPersonName"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toStartOf="@+id/homeBookSearchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/homeBookSearchButton"
        android:layout_width="55dp"
        android:layout_height="0dp"
        app:srcCompat="@drawable/ic_search_black_24dp"
        android:background="@drawable/customborder"
        app:layout_constraintBottom_toBottomOf="@+id/homeBookSearchEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeBookSearchEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeBookSearchEditText">

        <TextView
            android:id="@+id/filtersTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/filtersTextview"
            android:textColor="#000000" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/cityFilterRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noticesInMyCity" />

            <RadioButton
                android:id="@+id/countryFilterRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noticesInMyCountry" />
        </RadioGroup>

        <Spinner
            android:id="@+id/genreFilterSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>